--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint '**/*.{js,jsx,ts,tsx}' --cache --fix"
   },
   "dependencies": {
+    "@types/gtag.js": "0.0.4",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
