--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.0.4",
     "eslint": "^7.24.0",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
