--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint-staged": "lint-staged",
     "prepare": "husky install",
     "prettier": "prettier **/* --write --ignore-unknown",
-    "lint": "eslint '**/*.{js,jsx,ts,tsx}' --cache --fix"
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
     "@types/gtag.js": "0.0.4",
@@ -37,7 +37,7 @@
     "typescript": "^4.2.4"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
     "**/*": "prettier --write --ignore-unknown"
   }
 }
