--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
   "parserOptions": { "ecmaVersion": 8 },
   "ignorePatterns": ["node_modules/*", ".next/*", ".out/*", "!.prettierrc.js"],
   "extends": ["eslint:recommended", "next"],
+  "rules": {},
   "overrides": [
     {
       "files": ["**/*.ts", "**/*.tsx"],
@@ -29,7 +30,9 @@
         "react/react-in-jsx-scope": "off",
         "jsx-a11y/anchor-is-valid": "off",
         "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/explicit-function-return-type": "off"
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "jsx-a11y/click-events-have-key-events": "warn",
+        "jsx-a11y/no-static-element-interactions": "warn"
       }
     }
   ]
