--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,8 @@
         "@typescript-eslint/no-unused-vars": "warn",
         "@typescript-eslint/explicit-function-return-type": "off",
         "jsx-a11y/click-events-have-key-events": "warn",
-        "jsx-a11y/no-static-element-interactions": "warn"
+        "jsx-a11y/no-static-element-interactions": "warn",
+        "react/jsx-key": "warn"
       }
     }
   ]
